Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-16646

[C++] HashJoin node can crash if a key column is a scalar

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 9.0.0
    • C++

    Description

      This only happens when the node has a bloom filter pushed down into it. In that case it will attempt to hash the key columns in arrow::compute::HashJoinBasicImpl::ApplyBloomFiltersToBatch by calling Hashing32::HashBatch on a batch made up only of key columns.

      If one of those key columns happens to be a scalar, and not an array, then this method triggers a DCHECK and crashes.

      Attachments

        Issue Links

          Activity

            People

              sakras Sasha Krassovsky
              westonpace Weston Pace
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m