ARROW-16646: [C++] Allow key columns to be scalars in Bloom filter

Closes #13236 from save-buffer/sasha_scalars

Authored-by: Sasha Krassovsky <krassovskysasha@gmail.com>
Signed-off-by: Weston Pace <weston.pace@gmail.com>