cpp/src/arrow/compute/exec/hash_join.cc
@@ -671,6 +671,11 @@ class HashJoinBasicImpl : public HashJoinImpl {
       for (size_t i = 0; i < keys.size(); i++) {
         int input_idx = bloom_filter_column_maps_[ifilter][i];
         keys[i] = batch[input_idx];
+        if (keys[i].is_scalar()) {
+          ARROW_ASSIGN_OR_RAISE(
+              keys[i],
+              MakeArrayFromScalar(*keys[i].scalar(), batch.length, ctx_->memory_pool()));
+        }
       }
       ARROW_ASSIGN_OR_RAISE(ExecBatch key_batch, ExecBatch::Make(std::move(keys)));
       RETURN_NOT_OK(Hashing32::HashBatch(
@@ -715,6 +720,11 @@ class HashJoinBasicImpl : public HashJoinImpl {
     for (size_t i = 0; i < key_columns.size(); i++) {
       int input_idx = key_to_in.get(static_cast<int>(i));
       key_columns[i] = input_batch[input_idx];
+      if (key_columns[i].is_scalar()) {
+        ARROW_ASSIGN_OR_RAISE(
+            key_columns[i], MakeArrayFromScalar(*key_columns[i].scalar(),
+                                                input_batch.length, ctx_->memory_pool()));
+      }
     }
     ARROW_ASSIGN_OR_RAISE(ExecBatch key_batch, ExecBatch::Make(std::move(key_columns)));
 
